# pytrickle

./: .editorconfig  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  README_CLI.md  SECURITY.md  lint.py  my_app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  show.txt
.github/workflows/: test.yml
docs/: trickle_media_examples.md
examples/: Dockerfile.async_processor_example  Dockerfile.process_audio_example  Dockerfile.process_video_example  README_CLI.md  __init__.py  async_output_drain_example.py  async_processor_example.py  audio_tensor_processing.py  audio_video_processing.py  grayscale_chipmunk_example.py  http_server_example.py  live_video_example.py  loading_overlay.py  loading_overlay_example.py  model_loading_example.py  overlay_example.py  passthrough_example.py  preview_video_example.py  process_audio_example.py  process_video_example.py  processor_config_examples.py  requirements.txt  secondary_channel_example.py  simple_async_example.py  simple_stream_processing.py  text_output_example.py  trickle_media_tools.py  trickle_protocol_passthrough.py
pytrickle/: __init__.py  api.py  api_spec.py  async_processor.py  base.py  cache.py  cli.py  client.py  decoder.py  decorators.py  encoder.py  exceptions.py  fps_meter.py  frame_overlay.py  frame_processing_types.py  frame_processor.py  frame_skipper.py  frames.py  health.py  lifecycle.py  loading_config.py  loading_overlay_controller.py  manager.py  media.py  monotonic_audio.py  preview_video_config.py  preview_video_controller.py  protocol.py  publisher.py  registry.py  retry_utils.py  runtime_args.py  security.py  server.py  simple_async_processor.py  state.py  stream_handler.py  stream_manager.py  stream_processor.py  subscriber.py  (+4 more)
pytrickle/examples/: __init__.py  grayscale_chipmunk_example.py  passthrough_example.py  process_video_example.py  requirements.txt
pytrickle/utils/: hardware.py  loading_overlay.py  preview_video.py  register.py
pytrickle/video_utils/: __init__.py  loading.py
tests/: test_api_validation.py  test_async_processing.py  test_decorators_runtime.py  test_detect_out_resolution.py  test_health_status_values.py  test_lifecycle_manager.py  test_loading_behavior.py  test_model_loading.py  test_model_loading_state_transitions.py  test_preview_video_behavior.py  test_prompt_validation.py  test_runtime_args.py  test_sentinel_model_loading.py  test_state_integration.py  test_state_transitions.py  test_stream_not_found.py  test_stream_processor_handlers.py  test_stream_server.py  test_system_endpoints.py  test_trickle_media_tools.py  test_version_endpoint.py
trickle_app/: client.py  decoder.py  encoder.py  protocol.py  publisher.py
